--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script
-     type="text/javascript" src="C:/Users/s161151/Documents/Data Science/Year 2/Quarter 2/Web Technology/bootstrap-3.3.7/docs/examples/cover/todo.js">
-   </script>
+    <script type="text/javascript" src="todo.js"></script>
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
