--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" src="favicon.ico">
+    <link rel="icon" href="../favicon.ico">
 
     <title>My Website</title>
 
