--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Lucas Peeters</h3>
+              <h3 class="masthead-brand">s161151</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">About Me</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li class="active"><a href="#">Today's date: <script type="text/javascript" src="date.js"></script></a></li>
                 </ul>
               </nav>
             </div>
@@ -72,11 +70,6 @@
   <li class="closable">Organize office</li>
 </ul>
 
-          <!-- <div class="mastfoot">
-            <div class="inner">
-              <p>Lucas Peeters for Web Technology</p>
-            </div>
-          </div> -->
 
         </div>
 
