--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">s161151</h3>
+              <h3 class="masthead-brand">Web Technology</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Today's date: <script type="text/javascript" src="date.js"></script></a></li>
