--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">My to-do list</h1>
-            <p class="lead">Manage my to-do list below. Feel free to ask some tasks if you feel that I need to do them. I will check here regularly but I cannot promise that I will do every task.</p>
+            <p class="lead">Manage my to-do list below. Feel free to add some tasks if you feel that I need to do them. I will check here regularly but I cannot promise that I will do every task.</p>
           </div>
 
           <div id="myDIV" class="header">
