--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--font roboto-->
+    <!--font roboto + Raleway-->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <title>My Website</title>
+    <title>Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -62,12 +63,13 @@
 </div>
 
 <ul id="myUL">
-  <li class="closable">Call my mom</li>
-  <li class="closable">Do groceries</li>
-  <li class="closable">Meet George</li>
-  <li class="closable">Finish website</li>
-  <li class="closable">Read a book</li>
-  <li class="closable">Organize office</li>
+  <li class="closable">Call Bas</li>
+  <li class="closable">Buy Christmas presents</li>
+  <li class="closable">Plan meeting with Jordy</li>
+  <li class="closable">Finish assignment 2</li>
+  <li class="closable">Return Eva's book</li>
+  <li class="closable">Organize Peter's office</li>
+  <li class="closable">Ask Paul for a raise</li>
 </ul>
 
 
