--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Web Technology</h3>
-              <nav>
                 <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Today's date: <script type="text/javascript" src="date.js"></script></a></li>
+                  <li class="active">Today's date: <script type="text/javascript" src="date.js"></script></li>
                 </ul>
-              </nav>
             </div>
           </div>
 
